Corrige issues menores en JWTAuthorizationFilter